--- a/07-projeto-portfolio/meu-projeto-pessoal-arquivos/global.css
+++ b/07-projeto-portfolio/meu-projeto-pessoal-arquivos/global.css
@@ -21,3 +21,26 @@ img {
   max-width: 100%;
   display: block;
 }
+
+.subtitulo {
+  font-family: "Playfair Display", "Times New Roman", Times, serif;
+  font-size: 8rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  line-height: 1;
+  word-break: break-all;
+  max-width: 4ch;
+}
+
+p strong {
+  font-family: "Playfair Display", "Times New Roman", Times, serif;
+}
+
+@media (max-width: 800px) {
+  .subtitulo {
+    font-size: 3rem;
+    text-transform: capitalize;
+    max-width: initial;
+    /* text-align: center; */
+  }
+}
